--- a/uma .html
+++ b/uma .html
@@ -6,8 +6,8 @@
 	<title>Document</title>
 	<style>
 		*{
-			margin: 0;
-			padding: 0;
+			margin: 0px;
+			padding: 0px;
 			text-decoration: none;
 		}
 		.navbar{
